<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@color/card_metadata_item_background"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/binTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            tools:text="BIN: 12345678" />

        <LinearLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scheme_network"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/schemeNetworkTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    tools:text="Visa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/brand"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/brandTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    tools:text="Visa/Dankort" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_number"
                    android:textSize="@dimen/small_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/length"
                            android:textSize="@dimen/small_text_size" />

                        <TextView
                            android:id="@+id/lengthTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/medium_text_size"
                            android:textStyle="bold"
                            tools:text="16" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/luhn"
                            android:textSize="@dimen/small_text_size" />

                        <TextView
                            android:id="@+id/luhnTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/medium_text_size"
                            android:textStyle="bold"
                            tools:text="Yes" />


                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/typeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    tools:text="Debit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/prepaid"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/prepaidTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    tools:text="Yes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/country"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/countryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    tools:text="Denmark" />

                <TextView
                    android:id="@+id/coordinatesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:textSize="@dimen/small_text_size"
                    tools:text="latitude: 10, longitude: 10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bank"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/bankNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    tools:text="Bank name" />

                <TextView
                    android:id="@+id/cityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    tools:text="City" />

                <TextView
                    android:id="@+id/bankUrlTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size"
                    tools:text="www.jyskebank.dk" />

                <TextView
                    android:id="@+id/bankPhoneTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size"
                    tools:text="+4589893301" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>